refactored client-side of rtsp2many

--- a/kurento-rtsp2many/static/index.html
+++ b/kurento-rtsp2many/static/index.html
@@ -94,13 +94,11 @@
 			<div class="col-md-5">
 				<div class="row">
 					<div class="col-md-12">
-						<a id="call" href="#" class="btn btn-success"
-							onclick="master(); return false;"><span
+						<a id="call" href="#" class="btn btn-success"><span
 							class="glyphicon glyphicon-play"></span> Master </a> <a id="viewer"
-							href="#" class="btn btn-primary"
-							onclick="viewer(); return false;"><span
+							href="#" class="btn btn-primary"><span
 							class="glyphicon glyphicon-user"></span> Viewer</a> <a id="terminate"
-							href="#" class="btn btn-danger" onclick="stop(); return false;"><span
+							href="#" class="btn btn-danger"><span
 							class="glyphicon glyphicon-stop"></span> Stop</a>
 					</div>
 				</div>
