--- a/aquamed-kurento-rtsp2webrtc/index.html
+++ b/aquamed-kurento-rtsp2webrtc/index.html
@@ -44,6 +44,7 @@
         var info = document.getElementById('info');
 
         startResponse.stop();
+	video.src = '';
         document.getElementById('start').disabled = false;
         document.getElementById('stop').disabled = true;
         info.value = 'Остановлено.';
