AquaMed sample rewritten to TypeScript

--- a/aquamed-kurento-rtsp2webrtc/index.html
+++ b/aquamed-kurento-rtsp2webrtc/index.html
@@ -95,9 +95,9 @@
 
 
     <script src="./js/aquamed-jurento-rtsp2webrtc.js"></script>
-    <script src="./js/kurento-client.js"></script>
-    <script src="./js/kurento-utils.js"></script>
-    <script src="./js/adapter.js"></script>
+    <script src="./bower_components/kurento-client/js/kurento-client.js"></script>
+    <script src="./bower_components/kurento-utils/js/kurento-utils.js"></script>
+    <script src="./bower_components/webrtc-adapter/adapter.js"></script>
     <script src="./script.js"></script>
 </body>
 </html>
