refactored AquaMed sample: removed init() method

--- a/aquamed-kurento-rtsp2webrtc/index.html
+++ b/aquamed-kurento-rtsp2webrtc/index.html
@@ -36,10 +36,10 @@
                 Пример 1. Воспроизведение RTSP потока.
 
                 <spn class="btn-group">
-                    <button id="start" class="btn btn-lg btn-success">
+                    <button id="start" class="btn btn-lg btn-success btn-start">
                         <span class="glyphicon glyphicon-play"></span> Старт
                     </button>
-                    <button id="stop" class="btn btn-lg btn-danger" disabled>
+                    <button id="stop" class="btn btn-lg btn-danger btn-stop" disabled>
                         <span class="glyphicon glyphicon-stop"></span> Стоп
                     </button>
                 </spn>
