AquaMed sample: used RtspPlayer.state change events to maintaing buttons disabled-enabled state.

--- a/aquamed-kurento-rtsp2webrtc/index.html
+++ b/aquamed-kurento-rtsp2webrtc/index.html
@@ -50,14 +50,17 @@
                 <h1>
                     Пример 1. Воспроизведение RTSP потока.
 
-                    <spn class="btn-group">
+                    <span class="btn-group">
                         <button id="start" class="btn btn-lg btn-success btn-start">
                             <span class="glyphicon glyphicon-play"></span> Старт
+                        </button>
+                        <button class="btn btn-lg btn-default btn-pause" disabled>
+                            <span class="glyphicon glyphicon-pause"></span> Пауза
                         </button>
                         <button id="stop" class="btn btn-lg btn-danger btn-stop" disabled>
                             <span class="glyphicon glyphicon-stop"></span> Стоп
                         </button>
-                    </spn>
+                    </span>
                 </h1>
             </div>            
         </div>
@@ -90,7 +93,7 @@
                         <button id="start-2" class="btn btn-lg btn-success btn-start">
                             <span class="glyphicon glyphicon-play"></span> Старт
                         </button>
-                        <button id="stop-2" class="btn btn-lg btn-default btn-pause" disabled>
+                        <button id="pause-2" class="btn btn-lg btn-default btn-pause" disabled>
                             <span class="glyphicon glyphicon-pause"></span> Пауза
                         </button>
                         <button id="stop-2" class="btn btn-lg btn-danger btn-stop" disabled>
