[rtsp2many] AddMaster command

--- a/kurento-rtsp2many/static/index.html
+++ b/kurento-rtsp2many/static/index.html
@@ -55,7 +55,7 @@
             <form class="form-inline">
                 <div class="form-group">
                     <label for="exampleInputName2">Application Server Address</label>
-                    <input type="text" id="app-server-address" class="form-control" value="10.5.6.119:8080" />
+                    <input type="text" id="app-server-address" class="form-control" value="localhost:8080" />
                 </div>
             </form>
 
