[KurentoHub] client-server classes for RPC

--- a/kurento-rtsp2many/static/index.html
+++ b/kurento-rtsp2many/static/index.html
@@ -22,7 +22,7 @@
     <script src="bower_components/kurento-utils/js/kurento-utils.js"></script>
 
     <script src="js/console.js"></script>
-    <script src="js/index.js"></script>
+    <script src="index.js"></script>
     <title>Kurento Tutorial 3: Video Call 1 to N with WebRTC</title>
 </head>
 
