--- a/kurento-rtsp2many/web/index.html
+++ b/kurento-rtsp2many/web/index.html
@@ -48,6 +48,41 @@
         </div>
     </header>
     <div class="container">
+        <div class="row">
+            <div class="col-md12">
+                <h1>KurentoHub Client example.</h1>
+                <hr/>
+            </div>            
+        </div>
+        <div class="row">
+            <form class="form-inline">
+                <div class="form-group">
+                    <label for="exampleInputName2">WAMP Router Domain</label>
+                    <input type="text" id="wamp-router-domain" class="form-control" value="localhost:8080" />
+                </div>
+            </form>
+        </div>
+        <div class="row">
+            <div class="col-md-5"> 
+                <label class="control-label" for="console">Console</label>
+                <div id="console"></div>
+            </div>
+            <div class="col-md-7">
+                <div id="videoBig" class="video-component">
+                    <video id="video" 
+                           autoplay="autoplay" 
+                           controls="controls"
+                           width="640px" 
+                           height="480px"
+                           poster="img/webrtc.png"></video>
+                    <div class="controls">
+                        <input type="url" class="form-control" value="rtsp://10.5.5.85/media/video2" />
+                    </div>
+                </div>
+            </div>
+        </div>
+        
+        <!--
         <div class="page-header">
             <h1>Restream</h1>
 
@@ -124,6 +159,7 @@
             </div>
         </div>
     </div>
+    -->
 
     <footer>
         <div class="foot-fixed-bottom">
