--- a/kurento-rtsp2many/web/index.html
+++ b/kurento-rtsp2many/web/index.html
@@ -68,9 +68,20 @@
                 <div id="console"></div>
             </div>
             <div class="col-md-7">
+                <button id="btn-play-all" class="btn btn-default">Play all</button>
                 <div id="videoBig" class="video-component">
                     <video id="video" 
                            autoplay="autoplay" 
+                           controls="controls"
+                           width="640px" 
+                           height="480px"
+                           poster="img/webrtc.png"></video>
+                    <div class="controls">
+                        <input type="url" class="form-control" value="rtsp://10.5.5.85/media/video2" />
+                    </div>
+                </div>
+                <div class="video-component">
+                    <video autoplay="autoplay" 
                            controls="controls"
                            width="640px" 
                            height="480px"
