--- a/kurento-rtsp2many/web/index.html
+++ b/kurento-rtsp2many/web/index.html
@@ -34,6 +34,15 @@
                             data-target=".navbar-collapse"></button>
                     <a class="navbar-brand" href=".">Kurento Tutorial</a>
                 </div>
+                <div>
+                    <ul class="nav navbar-nav">
+                        <li>
+                            <a href="streams.html">
+                                <span class="glyphicon glyphicon-film"></span> Streams
+                            </a>
+                        </li>
+                    </ul>
+                </div>
                 <div class="collapse navbar-collapse"
                      id="bs-example-navbar-collapse-1">
                     <ul class="nav navbar-nav navbar-right">
